# ChatBot_1_1

./: .gitignore  CMakeLists.txt  README.md  user.cpp  user.h
src/ChatBot/: chat_bot.cpp  chat_system.cpp  chat_system.h
src/chat/: chat.cpp  chat.h
src/client-server/: chat_system.cpp  chat_system.h  client_session.cpp  client_session.h
src/exception/: login_exception.h  my_exception.h  validation_exception.h
src/menu/: 0_init_system.cpp  0_init_system.h  1_registration.cpp  1_registration.h  2_0_login_menu.cpp  2_0_login_menu.h  2_1_new_chat_menu.cpp  2_1_new_chat_menu.h  2_2_chat_list_menu.cpp  2_2_chat_list_menu.h  2_4_user_profile.cpp  2_4_user_profile.h
src/message/: message.cpp  message.h  message_content_struct.h
src/system/: chat_system.cpp  chat_system.h  date_time_utils.cpp  date_time_utils.h  dto_struct.h  id_generator.cpp  id_generator.h  prefix_tree.cpp  prefix_tree.h  system_function.cpp  system_function.h  weak_map.h
src/user/: user.cpp  user.h  user_chat_list.cpp  user_chat_list.h
